--- a/styles.css
+++ b/styles.css
@@ -68,10 +68,49 @@ nav a {
 }
 
 #main {
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    padding: 20px;
-    background: #556b2f;
-    margin-top: 20px;
+    background-color: olive;
+}
+
+#main #mushroom-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#main #mushroom-text {
+    width: 60%;
+}
+
+#mushroom-text {
+    margin-left: 10px;
+}
+
+#main #mushroom-image {
+    width: 35%;
+}
+
+#main #mushroom-image img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    margin-top: 10px;
+}
+
+#main #mushroom-text h2 {
+    font-size: 36px;
+}
+
+#main #mushroom-text p {
+    font-size: xx-large;
+    color: #ccc;
+}
+
+#main #mushroom-text a {
+    color: black; /* Neue Farbe für den Linktext */
+    text-decoration: none;
+}
+
+#main #mushroom-text a:hover {
+    color: rgb(45, 44, 44); /* Farbe bei Hover-Status ändern */
 }
